...
            android:text="@string/ingredients"
            android:textColor="@color/dialog_details"
            android:textSize="30sp"
            android:textAllCaps="true"/>

        <ListView
            android:id="@+id/ingredientsListDialog"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_below="@id/heading"
            android:layout_marginTop="20dp"
            android:textColor="@color/dialog_details" />

...
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/dialog_details"/>

        <TextView
            android:id="@+id/action_ok"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@id/subText"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
...
