...
        android:textColor="@color/iconDetails"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@id/shoppingListHat"/>

    <ListView
        android:id="@+id/shoppingListListView"
        android:layout_width="357dp"
        android:layout_height="360dp"
        android:layout_below="@id/shoppingListHeader"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
...
